Update exe config